--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 
 <li><a href="SERS.html" target="_blank"><input type="checkbox">SERS</a></li>
 <li><a href="NanoParticle.html" target="_blank"><input type="checkbox">NanoParticle</a></li>
-<li><a href="Electrochemistry.html" target="_blank"><input type="checkbox">ElectroChemistry</a></li>
+<li><a href="ElectroChemistry.html" target="_blank"><input type="checkbox">ElectroChemistry</a></li>
 </Ol>
 
 
