--- a/NanoParticle.html
+++ b/NanoParticle.html
@@ -8,6 +8,19 @@
 </head>
 
 <body>
+  
+<Ol>
+<li><a href="SERS.html" target="_blank"><input type="checkbox">SERS</a></li>
+<li><a href="NanoParticle.html" target="_blank" style="color:red; text-decoration:underline"><input type="checkbox">NanoParticle</a></li>
+<li><a href="ElectroChemistry.html" target="_blank"><input type="checkbox">ElectroChemistry</a></li>
+</Ol>  
+  
+ 
+  
+  
+  
+  
+ <p> 
 A nanoparticle or ultrafine particle is usually defined as a particle of matter that is between 1 and 100 nanometres (nm) in diameter.[1][2] The term is sometimes used for larger particles, up to 500 nm,[citation needed] or fibers and tubes that are less than 100 nm in only two directions.[3] At the lowest range, metal particles smaller than 1 nm are usually called atom clusters instead.
 
 Nanoparticles are usually distinguished from microparticles (1-1000 µm), "fine particles" (sized between 100 and 2500 nm), and "coarse particles" (ranging from 2500 to 10,000 nm), because their smaller size drives very different physical or chemical properties, like colloidal properties and optical or electric properties.
@@ -25,4 +38,6 @@ Nanoparticles occur widely in nature and are objects of study in many sciences s
 In general, the small size of nanoparticles leads to a lower concentration of point defects compared to their bulk counterparts,[7] but they do support a variety of dislocations that can be visualized using high-resolution electron microscopes.[8] However, nanoparticles exhibit different dislocation mechanics, which, together with their unique surface structures, results in mechanical properties that are different from the bulk material.[9][10][11]
 
 Anisotropy in a nanoparticle leads to a lot of changes in the properties of the nanoparticles. Non-spherical nanoparticles of gold, silver, and platinum due to their fascinating optical properties are finding diverse applications and are of great interest in the field of research. Non-spherical geometries of nanoprisms give rise to high effective cross-sections and deeper colors of the colloidal solutions.[12] The possibility of shifting the resonance wavelengths by tuning the particle geometry is very interesting for using these nanoparticles in the fields of molecular labeling, for biomolecular assays, trace metal detection, and nanotechnical applications. Anisotropic nanoparticles display a specific absorption behavior and stochastic particle orientation under unpolarized light, showing a distinct resonance mode for each excitable axis. This property can be explained based on the fact that on a daily basis there are new developments being made in the field of synthesis of these nanoparticles for preparing them in high yield.
-</body>
+  </P>
+  
+  </body>
