--- a/SERS.html
+++ b/SERS.html
@@ -8,7 +8,17 @@
 </head>
 
 <body>
-SERS from pyridine adsorbed on electrochemically
+
+ <Ol>
+<li><a href="SERS.html" target="_blank" style="color:red; text-decoration:underline"><input type="checkbox">SERS</a></li>
+<li><a href="NanoParticle.html" target="_blank"><input type="checkbox">NanoParticle</a></li>
+<li><a href="ElectroChemistry.html" target="_blank"><input type="checkbox">ElectroChemistry</a></li>
+</Ol>  
+ 
+ <iframe width="560" height="315" src="https://www.youtube.com/embed/QZNxxn2snqs" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+ 
+ <P>
+ SERS from pyridine adsorbed on electrochemically
  roughened silver was first observed by Martin
   Fleischmann, Patrick J. Hendra and A. James
    McQuillan at the Department of Chemistry at
@@ -22,4 +32,5 @@ laque to the University of Southampton.
 In 1977, two groups independently noted that the concentration of scattering species could not account for the enhanced signal and each proposed a
   mechanism for the observed enhancement.
   Their theories are still accepted as explaining the SERS effect. Jeanmaire and Richard Van Duyne[7] proposed an electromagnetic effect, while Albrecht and Creighton[8] proposed a charge-transfer effect. Rufus Ritchie, of Oak Ridge National Laboratory's Health Sciences Research Division, predicted the existence of the surface plasmon
-</body>
+  </p>
+  </body>
